# legislation-rag-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  roadmap.md
notebooks/: README.md  scrap_senado_original.ipynb
src/legislation_rag_pipeline/: __init__.py  canonical.py  chunking.py  cli.py  collectors.py  config.py  pipeline.py  utils.py  vector_search.py
src/legislation_rag_pipeline/storage/: __init__.py  files.py  postgres.py
tests/: test_chunking.py  test_utils.py
