[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legislation-rag-pipeline"
version = "0.1.0"
description = "Pipeline for collecting Brazilian legislation, generating canonical JSON, creating legal chunks, and preparing PostgreSQL/pgvector persistence."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Gabriel B. Bispo" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "pgvector>=0.3.6",
  "psycopg2-binary>=2.9.10",
  "requests>=2.32.3",
  "sentence-transformers>=3.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
]

[project.scripts]
legislation-rag = "legislation_rag_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

